automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     </style>
   </head>
   <script>
+    const input = document.querySelector('input')
     
+    input.addEventListener('keydown', function(e) {
+      console.log(e.which)
+    })
   </script>
 
   <body>
