--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
        min-height: 12px;
      }
     </style>
+    <script>
+    const input = document.querySelector('input')
+    
+    input.addEventListener('keydown', function(e) {
+      console.log(e.which)
+    })
+  </script>
   </head>
+  
 
   <body>
     <main id="main">My ID is "main"!</main>
